--- a/design.kv
+++ b/design.kv
@@ -24,11 +24,14 @@
         Label:
             text: "Sign up!"
         TextInput:
+            id: username
             hint_text: "Username"
         TextInput:
+            id: password
             hint_text: "Password"
         Button:
             text: "Submit"
+            on_press: root.add_user(root.ids.username.text, root.ids.password.text)
 <RootWidget>:
     LoginScreen:
         name: "login_screen"
