--- a/design.kv
+++ b/design.kv
@@ -32,8 +32,18 @@
         Button:
             text: "Submit"
             on_press: root.add_user(root.ids.username.text, root.ids.password.text)
+<SignUpScreenSuccess>:
+    GridLayout:
+        cols:1
+        Label:
+            text: "Sign up Successful!"
+        Button:
+            text: "Login Page"
+            on_press: root.go_to_login()
 <RootWidget>:
     LoginScreen:
         name: "login_screen"
     SignUpScreen:
         name: "sign_up_screen"
+    SignUpScreenSuccess:
+        name: "sign_up_screen_success"
