--- a/design.kv
+++ b/design.kv
@@ -6,11 +6,17 @@
             Label:
                 text: "User Login"
             TextInput:
+                id: username
                 hint_text:"Username"
             TextInput:
+                id: password
                 hint_text:"Password"
             Button:
                 text: "Login"
+                on_press: root.login(root.ids.username.text, root.ids.password.text)
+            Label:
+                id: login_wrong
+                text: ""
         GridLayout:
             cols: 2
             Button:
@@ -40,6 +46,20 @@
         Button:
             text: "Login Page"
             on_press: root.go_to_login()
+<LoginScreenSucess>:
+    GridLayout:
+        cols:1
+        Button:
+            text: "Logout"
+            on_press: root.log_out()
+        Label:
+            text: "How do you feel?"
+        TextInput:
+            hint_text: "Things to try: happy, sad, unloved, etc."
+        Button:
+            text: "Enlighten me"
+        Label:
+            text: ""
 <RootWidget>:
     LoginScreen:
         name: "login_screen"
@@ -47,3 +67,5 @@
         name: "sign_up_screen"
     SignUpScreenSuccess:
         name: "sign_up_screen_success"
+    LoginScreenSucess:
+        name:"login_screen_success"
