--- a/design.kv
+++ b/design.kv
@@ -3,7 +3,10 @@
         cols: 1
         GridLayout:
             cols:1
+            padding: 15,15
+            spacing: 20,20
             Label:
+                font_size: "20sp"
                 text: "User Login"
             TextInput:
                 id: username
@@ -11,22 +14,36 @@
             TextInput:
                 id: password
                 hint_text:"Password"
-            Button:
-                text: "Login"
-                on_press: root.login(root.ids.username.text, root.ids.password.text)
+            RelativeLayout:
+                Button:
+                    text: "Login"
+                    size_hint: 0.3,0.5
+                    pos_hint: {'center_x':0.5, 'center_y': 0.6}
+                    on_press: root.login(root.ids.username.text, root.ids.password.text)
             Label:
                 id: login_wrong
                 text: ""
         GridLayout:
             cols: 2
+            size_hint: 0.2,0.2
+            padding: 10,10
+            spacing: 10,0
             Button:
+                background_color: 1,1,1,0
+                opacity: 1 if self.state =="normal" else 0.5
+                color: 0.1,0.7,1,1
                 text: "Forgot Password?"
             Button:
+                background_color: 1,1,1,0
+                opacity: 1 if self.state =="normal" else 0.5
+                color: 0.1,0.7,1,1
                 text: "Sign Up"
                 on_press: root.sign_up()
 <SignUpScreen>:
     GridLayout:
         cols:1
+        padding:20,20
+        spacing:20,20
         Label:
             text: "Sign up!"
         TextInput:
@@ -49,9 +66,14 @@
 <LoginScreenSucess>:
     GridLayout:
         cols:1
-        Button:
-            text: "Logout"
-            on_press: root.log_out()
+        padding: 30,30
+        spacing: 30,30
+        RelativeLayout:
+            ImageButton:
+                source: 'logout_hover.png' if self.hovered else "logout_nothover.png"
+                on_press: root.log_out()
+                size_hint: 0.35,0.35
+                pos_hint: {'center_x':0.93,'center_y':0.8}
         Label:
             text: "How do you feel?"
         TextInput:
@@ -60,9 +82,13 @@
         Button:
             text: "Enlighten me"
             on_press: root.get_quote(root.ids.feeling.text)
-        Label:
-            id: quote
-            text: ""
+        ScrollView:
+            Label:
+                id: quote
+                text: ""
+                text_size: self.width, None
+                size_hint_y: None
+                height: self.texture_size[1]
 <RootWidget>:
     LoginScreen:
         name: "login_screen"
